fixed how images are displayed on mobile and centerd work text

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -115,20 +115,16 @@ body {
 	margin-bottom: 20px;
 }
 
+.carousel-container {
+	text-align: center;
+}
+
 .work-pictures {
     -webkit-box-shadow: 0 1px 4px 0 rgba(0,0,0,0.37);
 	-moz-box-shadow: 0 1px 4px 0 rgba(0,0,0,0.37);
 	box-shadow: 0 1px 4px 0 rgba(0,0,0,0.37);
 	margin: 1px auto 20px;
 	width: 99.5%;
-}
-
-.alt-image-height {
-    width: 70%;
-}
-
-.alt-image-height-50 {
-    width: 50%;
 }
 
 .video {
@@ -231,6 +227,11 @@ body {
 	.work-content {
 		margin-bottom: 40px;
 	}
+
+	.alt-image-height,
+	.alt-image-height-50 {
+	    width: 99.5%;
+	}
     
     .video {
         width: 320px; 
@@ -238,7 +239,7 @@ body {
     }
 
 	.content {
-		padding-top: 110px;
+		padding-top: 120px;
 	}
 
 	.about-container .four.columns {
@@ -280,6 +281,14 @@ body {
 	.nav-content {
 		float: left;
 	}
+
+	.alt-image-height {
+	    width: 70%;
+	}
+
+	.alt-image-height-50 {
+	    width: 50%;
+	}
     
     .video {
         width: 640px;
@@ -295,10 +304,6 @@ body {
 
 	.three.columns {
 	    width: 22%;
-	}
-
-	.content {
-		padding-top: 100px;
 	}
 	    
 	.work-container .row,
